

Deprecations since 1.1
----------------------
- Chronology factory methods, such as getISO() and getCopticUTC()
  The ChronologyType class contains suitable replacement methods
    Chronology.getCoptic(zone)   is replaced by
    ChronologyType.coptic().getChronology(zone)
  These factory methods have been removed as they were a poor substitute
  for a proper type class, and confused the role of the Chronology class


Bug fixes since 1.1
-------------------
- ZonedChronology
  getMaximumValue(ReadablePartial)/getMinimumValue(ReadablePartial)
  Methods returned incorrect result

- ZonedChronology
  Better detection and handling of offset calculation overflow, throwing
  an ArithmeticException.

- DateTimeZone
  Handles offset calculation overflow errors for instants near Long.MAX_VALUE,
  ending the offset transition sequence.

- DateTimeFormatter
  Reverts to UTC if time zone offset calculation causes overflow. This allows at least
  the time of day fields to be printed for instants near Long.MIN_VALUE or Long.MAX_VALUE.

- CopticChronology
  Fixed regression in month of year calculation which affected getMaximumValue
  on dayOfMonth field.


Enhancements since 1.1
----------------------
- ChronologyType
  New type that acts as a factory for creating Chronology instances
  Chronology.getType() returns the type

- DateTime.Property.toInterval() (also DateMidnight/MutableDateTime)
  New method to convert return an Interval object over the span of the property
  Thus dt.monthOfYear().toInterval() returns an interval from the start to
  the end of the month

- MutableDateTime.property(DateTimeFieldType)
  Gets the property by type. Complements the method already on DateTime/DateMidnight.

- FieldUtils
  Performance optimization when adding by scalars of one or negative one. The
  overflow detecting multiplication skips the multiply and divide check for
  these values.


Feedback
--------
All feedback is welcomed at joda-interest@lists.sourceforge.net.

The Joda team